--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,17 +1,20 @@
 .container {
-  width: 290px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  margin: 0 auto;
 
+  width: 100%;
+
+  min-width: 320px;
+  max-width: 480px;
+}
 @media screen and (min-width: 768px) {
   .container {
-    width: 669px;
+    width: 768px;
+    min-width: 768px;
   }
 }
-
 @media screen and (min-width: 1280px) {
   .container {
-    width: 1137px;
+    width: 1280px;
+    min-width: 1280px;
   }
 }
