1. подправил тень на кнопке ButtonAddCard 2. сделал ховер на кнопки "go!" и "+" белым outline 3. подправил позиционирование кнопки "+" на разных разрешениях экрана (ранее - не менялось) 4. убрал Container из App.js и добавил его по отдельности в каждую страницу. Теперь фоновая позиционка на Landing тянется с разрешением экрана

--- a/src/pages/AuthPage/AuthPage.module.css
+++ b/src/pages/AuthPage/AuthPage.module.css
@@ -155,10 +155,13 @@
 
   box-shadow: 0 0 5px 2px #ff851c;
 
-  width: 53px;
-  height: 53px;
+  width: 52px;
+  height: 52px;
 
-  cursor: pointer;
+  /* cursor: pointer; */
+}
+.auth_form_button:hover {
+  border: solid 1px #fff;
 }
 /* Цвет плейсхолдера */
 ::-webkit-input-placeholder {
