--- a/src/components/ButtonAddCard/ButtonAddCard.module.css
+++ b/src/components/ButtonAddCard/ButtonAddCard.module.css
@@ -1,16 +1,33 @@
 .ButtonAddCard {
   position: fixed;
-  bottom: 30px;
-  right: 30px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 1px solid transparent;
-  background-color: var(--accent);
-  box-shadow: 2px 2px 10px rgba(255, 133, 28, 0.5);
-  color: white;
+  right: 15px;
+  bottom: 21px;
+
   font-size: 30px;
   font-family: "HelveticaNeueCyr-Light";
-  display: flex;
-  justify-content: center;
+
+  color: white;
+  background-color: var(--accent);
+
+  border-radius: 50%;
+  border: 1px solid transparent;
+  box-shadow: 0 0 5px 2px #ff851c;
+
+  width: 52px;
+  height: 52px;
+}
+@media screen and (min-width: 768px) {
+  .ButtonAddCard {
+    right: 23px;
+    bottom: 42px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .ButtonAddCard {
+    right: 46px;
+    bottom: 40px;
+  }
+}
+.ButtonAddCard:hover {
+  border: solid 1px #fff;
 }
