--- a/src/pages/AuthPage/AuthPage.module.css
+++ b/src/pages/AuthPage/AuthPage.module.css
@@ -4,14 +4,14 @@
   letter-spacing: 0.01em;
 }
 /* ======== Стили Секции ====== */
-.hero {
+.landing {
   padding-top: 60px;
   padding-bottom: 181px;
   padding-left: 15px;
   padding-right: 15px;
 }
 @media screen and (min-width: 768px) {
-  .hero {
+  .landing {
     padding-top: 312px;
     padding-bottom: 312px;
     padding-left: 50px;
@@ -19,7 +19,7 @@
   }
 }
 @media screen and (min-width: 1280px) {
-  .hero {
+  .landing {
     padding-top: 193px;
     padding-bottom: 194px;
     padding-left: 229px;
