--- a/src/components/modal/DifficultModal/difficultModal.module.css
+++ b/src/components/modal/DifficultModal/difficultModal.module.css
@@ -1,10 +1,13 @@
 .list {
+  position: absolute;
   color: var(--bg-card-stuff);
   padding: 14px 16px 14px 27px;
   background-color: #fff;
   box-shadow: -3px -4px 4px rgba(21, 57, 90, 0.05),
     3px 4px 4px rgba(21, 57, 90, 0.05);
   border-radius: 10px;
+  left: 0;
+  top: -15%;
 }
 
 .fstOption {
