--- a/src/components/modal/modalDelete/Delete.module.css
+++ b/src/components/modal/modalDelete/Delete.module.css
@@ -1,4 +1,7 @@
 .modal {
+  position: absolute;
+  left: 13%;
+  top: 32%;
   background-color: #fff;
   box-shadow: -3px -4px 4px rgba(21, 57, 90, 0.03),
     3px 4px 4px rgba(21, 57, 90, 0.03);
@@ -13,6 +16,7 @@
   margin-right: 21px;
   padding: 0;
   position: relative;
+  cursor: pointer;
 
   text-align: center;
   text-transform: uppercase;
@@ -38,6 +42,7 @@
   background: none;
   border: none;
   padding: 0;
+  cursor: pointer;
 
   font-size: 10px;
   line-height: 1;
