--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,21 +1,37 @@
 .headerSection {
   background-color: #242a37;
+
+  /* position: fixed;
+  top: 0;
+  width: 100%; */
 }
 
 .header {
-  height: 60px;
   box-shadow: 0px 4px 4px rgba(36, 42, 55, 0.1);
+
+  padding-left: 15px;
+  padding-right: 15px;
+
+  height: 60px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 @media screen and (min-width: 768px) {
   .header {
-    height: 70px;
     padding-left: 50px;
     padding-right: 50px;
+
+    height: 70px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header {
+    padding-left: 70px;
+    padding-right: 70px;
+
+    height: 70px;
   }
 }
 
