1. настроил маршруты - теперь работает переход со страницы Landing на страницу Dashboard 2. дополнил стилизацию на странице Dashboard: - зависает Хэдер при прокрутке - и карточки рендерятся с отступом от Хедера 3. на странице Авторизации рендерится по умочанию форма Логина 4. при нажатии на этой странице на SignIn  - рендерится форма Регистрации 5. для визуального отличия ВРЕМЕННО дал разные названия кнопкам в разных формах "LOG" и "REG". Теперь визуально по надписи кнопки можно понять в какой форме находишься.  Впоследствии - это будет одинаковая надпись на кнопках "go!" 6. при успешном Логине автоматически переходим на страницу с карточками Dashboard

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
 .headerSection {
   background-color: #242a37;
 
-  /* position: fixed;
+  position: fixed;
   top: 0;
-  width: 100%; */
+  width: 100%;
 }
 
 .header {
