--- a/src/utils/variables.css
+++ b/src/utils/variables.css
@@ -16,6 +16,7 @@
   --font-primary: #282828;
   --font-secondary: #b9c3c8;
   --font-tertiary: #7b8aa4;
+  --font-input: #282828;
   --font-accent: #00d7ff;
   --font-button-cancel: #24d40c;
   --font-button-delete: #db0938;
