--- a/src/components/CardsTomorrow/CardsTomorrow.module.css
+++ b/src/components/CardsTomorrow/CardsTomorrow.module.css
@@ -8,6 +8,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 @media screen and (min-width: 768px) {
   .section {
     padding-top: 30px;
@@ -77,3 +78,19 @@
     margin-left: 28px;
   }
 }
+
+
+/* PHONE LANDSCAPE */
+@media only screen and (min-width: 320px) and (orientation: landscape) {
+  .section {
+    max-width: 100%;
+  }
+
+  .cardSet {
+    margin-left: -27px;
+    flex-direction: row;
+    /* background-color: plum; */
+  }
+}
+
+
