--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -18,3 +18,17 @@
     min-width: 1280px;
   }
 }
+@media screen and (min-width: 320px) and (orientation: landscape) {
+  .container {
+    /* background-color: lightblue; */
+    max-width: 600px;
+  }
+}
+/* IPAD MINI */
+
+/* @media only screen and (min-width:  1024px) and (orientation: landscape) {
+  .container {
+    background-color: purple;
+    min-width: 920px;
+  }
+} */
