--- a/src/components/modal/ChallengeHeaderModal/ChallengeModal.module.css
+++ b/src/components/modal/ChallengeHeaderModal/ChallengeModal.module.css
@@ -2,15 +2,17 @@
   background-color: var(--font-tertiary);
   border-radius: 10px;
   position: absolute;
-  padding: 25px 25px;
+  padding: 10px 10px;
   height: 250px;
   width: 200px;
   top: 65px;
   left: -180%;
   display: block;
+  cursor: auto;
 }
 @media screen and (min-width: 768px) {
   .modal {
+    padding: 15px 15px;
     left: -190%;
     height: 300px;
     width: 250px;
@@ -19,6 +21,8 @@
 }
 @media screen and (min-width: 1280px) {
   .modal {
+    padding: 25px 25px;
+    margin-left: -27px;
     left: -180%;
     height: 400px;
     width: 350px;
@@ -40,6 +44,81 @@
 }
 @media screen and (min-width: 1280px) {
   .modal::before {
-    left: 42%;
+    left: 50%;
+  }
+}
+
+.listItem {
+  background-color: var(--primary);
+  border-radius: 10px;
+  width: 180px;
+  height: 90px;
+  padding-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .listItem {
+    padding-top: 20px;
+    width: 220px;
+    height: 120px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .listItem {
+    width: 300px;
+    height: 120px;
+  }
+}
+
+.listItem:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.itemTitle {
+  color: var(--background-card);
+  font-family: "HelveticaNeueCyr-Bold";
+  font-size: 17px;
+  line-height: 20px;
+  margin-bottom: 5px;
+}
+@media screen and (min-width: 1280px) {
+  .itemTitle {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 10px;
+  }
+}
+
+.itemTime {
+  color: var(--font-secondary);
+  font-family: "HelveticaNeueCyr-Medium";
+  font-size: 14px;
+}
+@media screen and (min-width: 768px) {
+  .itemTime {
+    font-size: 17px;
+  }
+}
+
+.itemCategory {
+  background: #fff6c0;
+  border-radius: 0px 15px 15px 0px;
+  width: 88px;
+  height: 20px;
+  font-family: "HelveticaNeueCyr-Medium";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 11px;
+  letter-spacing: 0.02em;
+  align-items: center;
+  display: flex;
+  padding-left: 21px;
+  margin-top: 8px;
+}
+@media screen and (min-width: 768px) {
+  .itemCategory {
+    width: 88px;
+    height: 25px;
+    margin-top: 15px;
   }
 }
