--- a/src/components/CardsToday/CardsToday.module.css
+++ b/src/components/CardsToday/CardsToday.module.css
@@ -43,18 +43,14 @@
   display: flex;
   flex-direction: column;
 }
-/* new */
+/* IPHONE LANDSCAPE MODE*/
 @media only screen and (min-width: 320px) and (orientation: landscape){
   .section {
     max-width: 100%;
-    /* background-color: pink; */
-    
   }
   .cardSet {
     margin-left: -27px; 
     flex-direction: row;
-    
-    /* background-color: orange; */
   }
   li{
     width: calc((100% / 2) - 27px);
