--- a/src/components/CardsTomorrow/CardsTomorrow.module.css
+++ b/src/components/CardsTomorrow/CardsTomorrow.module.css
@@ -9,6 +9,31 @@
   margin-right: auto;
 }
 
+.cardSet {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  margin-top: -20px;
+}
+
+@media only screen and (min-width: 320px) and (orientation: landscape) {
+  .section {
+    max-width: 100%;
+  }
+
+  .cardSet {
+    margin-left: -27px;
+    flex-direction: row;
+  }
+
+  li {
+    width: calc((100% / 2) - 27px);
+    margin-left: 27px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .section {
     padding-top: 30px;
@@ -80,7 +105,7 @@
 }
 
 
-/* PHONE LANDSCAPE */
+/* IPHONE LANDSCAPE */
 @media only screen and (min-width: 320px) and (orientation: landscape) {
   .section {
     max-width: 100%;
@@ -89,7 +114,6 @@
   .cardSet {
     margin-left: -27px;
     flex-direction: row;
-    /* background-color: plum; */
   }
 }
 
