--- a/src/components/modal/ChallengeCard/ChallengeCard.module.css
+++ b/src/components/modal/ChallengeCard/ChallengeCard.module.css
@@ -238,3 +238,11 @@
   color: var(--option-color);
   margin-right: 10px;
 }
+
+/* IPAD MINI LAYOUT */
+@media only screen and (min-width: 1024px) and (orientation: landscape) {
+  .card {
+    width: calc((100% / 4) - 27px);
+
+  }
+}
