--- a/src/utils/variables.css
+++ b/src/utils/variables.css
@@ -11,6 +11,7 @@
   --bg-card-family: #ffe6d3;
   --bg-card-health: #cdf7ff;
   --bg-card-stuff: #b9c3c8;
+  --bg-card-work: #d3f6ce;
   --option-color: #db0837;
 
   --font-primary: #282828;
