--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -62,6 +62,23 @@
 
 /* new style */
 
+.editTitle {
+  font-family: HelveticaNeueCyr;
+
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 12px;
+
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+
+  color: var(--font-secondary);
+
+  margin-top: -30px;
+}
+
 .bottomMenu {
   display: flex;
   align-items: center;
