--- a/src/pages/AuthPage/AuthPage.module.css
+++ b/src/pages/AuthPage/AuthPage.module.css
@@ -1,20 +1,16 @@
-.wrapper {
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 0.01em;
-}
 /* ======== Стили Секции ====== */
 .landing {
   padding-top: 60px;
   padding-bottom: 181px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 @media screen and (min-width: 768px) {
   .landing {
     padding-top: 306px;
     padding-bottom: 306px;
     padding-left: 50px;
-    padding-right: 338px;
+    padding-right: 352px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -22,7 +18,7 @@
     padding-top: 186px;
     padding-bottom: 185px;
     padding-left: 229px;
-    padding-right: 489px;
+    padding-right: 518px;
   }
 }
 
@@ -58,8 +54,6 @@
   line-height: 1.61;
 
   color: #15395a;
-
-  padding-right: 12px;
 
   margin-bottom: 30px;
 }
@@ -122,7 +116,7 @@
     height: 312px;
 
     top: 633px;
-    right: calc(320px + 65px - 408px);
+    right: calc(320px + 65px - 408px - 10px);
 
     border-radius: 10px;
 
@@ -170,7 +164,7 @@
     height: 470px;
 
     top: 645px;
-    right: calc(320px + 430px - 707px);
+    right: calc(320px + 430px - 707px - 10px);
 
     border-radius: 10px;
 
