--- a/src/components/DoneSection/DoneSection.module.css
+++ b/src/components/DoneSection/DoneSection.module.css
@@ -1,21 +1,88 @@
-.sectionDone {
-  width: 290px;
-  margin: 0 auto;
-  margin-top: 50px;
+.section {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  max-width: 290px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+.cardSet {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  margin-top: -5px;
+}
+
+.card {
+  box-shadow: -3px -4px 4px rgba(21, 57, 90, 0.03),
+    3px 4px 4px rgba(21, 57, 90, 0.03);
+  border-radius: 10px;
+
+  background: var(--background-card);
+
+  padding: 20px;
+
+  margin-top: 20px;
+
+  display: flex;
+  flex-direction: column;
+}
+/* IPHONE LANDSCAPE MODE*/
+@media only screen and (min-width: 320px) and (orientation: landscape){
+  .section {
+    max-width: 100%;
+  }
+  .cardSet {
+    margin-left: -27px; 
+    flex-direction: row;
+  }
+  li{
+    width: calc((100% / 2) - 27px);
+    margin-left: 27px;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  .sectionDone {
-    width: 670px;
-    margin: 0 auto;
-    margin-top: 50px;
+  .cardSet {
+    flex-direction: row;
+    margin-left: -27px;
+  }
+
+  .card {
+    width: calc((100% / 3) - 27px);
+    margin-left: 27px;
+  }
+
+  .section {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+
+    max-width: none;
   }
 }
+
 @media screen and (min-width: 1280px) {
-  .sectionDone {
-    width: 1137px;
-    margin: 0 auto;
-    margin-top: 60px;
+  .section {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .cardSet {
+    max-width: 100%;
+    flex-direction: row;
+  }
+
+  .card {
+    width: calc((100% / 5) - 28px);
+    margin-left: 28px;
   }
 }
 
@@ -45,7 +112,7 @@
 .lineWrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: -10px;
 }
 
 .lineWrapper::after {
@@ -58,4 +125,9 @@
     var(--bg-card-stuff) 40%
   );
   background-size: 20px 100%;
+  margin-left: 60px;
 }
+
+
+
+
