--- a/src/utils/variables.css
+++ b/src/utils/variables.css
@@ -2,6 +2,7 @@
   --primary: #15395a;
   --secondary: #242a37;
   --accent: #ff851c;
+  --accent-hover: #f86b19;
 
   --background-main: #f2f3f7;
   --background-card: #ffffff;
