--- a/src/components/modal/ChallengeCard/ChallengeCard.module.css
+++ b/src/components/modal/ChallengeCard/ChallengeCard.module.css
@@ -25,7 +25,7 @@
 .challenge {
   margin-bottom: 10px;
 
-  font-family: HelveticaNeueCyr;
+  font-family: "HelveticaNeueCyr-Bold";
 
   font-size: 12px;
   line-height: 1;
@@ -107,7 +107,10 @@
   line-height: 20px;
   text-align: center;
 }
-
+.input:focus,
+.input:hover {
+  outline: none;
+}
 .cross {
   color: var(--option-color);
   margin-left: auto;
@@ -129,7 +132,7 @@
 .start {
   color: var(--font-accent);
 
-  font-family: HelveticaNeueCyr;
+  font-family: "HelveticaNeueCyr-Medium";
   font-size: 14px;
   line-height: 1;
   letter-spacing: 0.02em;
@@ -178,7 +181,7 @@
 
   .cross {
     color: var(--option-color);
-    margin-left: 28px;
+    margin-left: 27px;
     margin-right: 14px;
     /* width: 10px;
     height: 10px; */
@@ -198,7 +201,6 @@
   .start {
     color: var(--font-accent);
 
-    font-family: HelveticaNeueCyr;
     font-size: 14px;
     line-height: 1;
     letter-spacing: 0.02em;
@@ -212,11 +214,11 @@
     display: flex;
     flex-wrap: wrap;
 
-    margin-left: -28px;
+    margin-left: -27px;
   }
   .card {
-    width: calc((100% / 5) - 28px);
-    margin-left: 28px;
+    width: calc((100% / 5) - 27px);
+    margin-left: 27px;
   }
 }
 
