--- a/src/components/ButtonAddCard/ButtonAddCard.module.css
+++ b/src/components/ButtonAddCard/ButtonAddCard.module.css
@@ -17,6 +17,11 @@
   height: 52px;
   z-index: 150;
 }
+.ButtonAddCard:hover,
+.ButtonAddCard:focus {
+   background: var(--accent-hover);
+   box-shadow: 0 0 5px 2px var(--accent-hover);
+}
 @media screen and (min-width: 768px) {
   .ButtonAddCard {
     right: 23px;
@@ -29,6 +34,4 @@
     bottom: 40px;
   }
 }
-.ButtonAddCard:hover {
-  border: solid 1px #fff;
-}
+
