--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ button {
   /* Chrome < 4, Legacy iOS */
 }
 
-.learning {
+/* .learning {
   background-color: var(--bg-card-learning);
 }
 
@@ -148,4 +148,7 @@ button {
 }
 .work {
   background-color: var(--bg-card-work);
-}
+} */
+
+
+
