--- a/src/components/modal/ModalAddCard/ModalAddCard.module.css
+++ b/src/components/modal/ModalAddCard/ModalAddCard.module.css
@@ -6,30 +6,31 @@
   border-radius: 20px;
   width: 210px;
   height: 140px;
-  background-color: #939fb3;
+  /* background-color: #939fb3; */
+  background-color: transparent;
   padding-top: 30px;
-  right: 15px;
-  bottom: 80px;
-  padding: 30px 5px 0px 10px;
+  right: -60px;
+  bottom: 110px;
 }
 @media screen and (min-width: 768px) {
   .exitModal {
-    padding: 25px 15px 0px 15px;
     width: 230px;
     height: 145px;
-    bottom: 100px;
+    right: -65px;
+    bottom: 140px;
   }
 }
 @media screen and (min-width: 1280px) {
   .exitModal {
-    width: 250px;
+    width: 80px;
     height: 150px;
-    padding: 25px 25px 0px 25px;
+    bottom: 140px;
+    right: 35px;
   }
 }
 
-.exitModal::before {
-  content: "";
+/* .exitModal::before {
+  content: '';
   position: absolute;
   border: 10px solid transparent;
   border-top: 10px solid #939fb3;
@@ -40,7 +41,7 @@
   .exitModal::before {
     left: 74%;
   }
-}
+} */
 
 .closeBtn {
   border-color: transparent;
@@ -57,7 +58,7 @@
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.04em;
-  font-family: "HelveticaNeueCyr-Bold";
+  font-family: 'HelveticaNeueCyr-Bold';
 }
 @media screen and (min-width: 1280px) {
   .addCardTitle {
@@ -68,13 +69,12 @@
 
 .btnDiv {
   margin-top: 10px;
-  display: flex;
-  padding-left: 25px;
-  padding-right: 35px;
+  display: block;
+  width: 80px;
+  margin: 0 auto;
 }
 
 .challengeIconBtn {
-  margin-right: 35px;
   margin-top: 5px;
 }
 
@@ -82,11 +82,13 @@
 .iconStarBtn {
   border: none;
   background-color: transparent;
+  width: 80px;
 }
 
 .challengeIconSvg,
 .IconStarSvg {
   fill: var(--font-accent);
+  filter: drop-shadow(1px 2px 3px rgb(0 0 0 / 0.4));
 }
 
 .challengeIconSvg {
@@ -120,7 +122,7 @@
   fill: var(--accent);
 }
 
-.titleCards {
+/* .titleCards {
   display: flex;
   padding-left: 20px;
   padding-right: 35px;
@@ -134,8 +136,4 @@
   .titleCards {
     font-size: 13px;
   }
-}
-
-.challengeTitle {
-  margin-right: 25px;
-}
+} */
